@@ -1,4 +1,10 @@
 
+Изменения в nginx 1.9.9                                           09.12.2015
+
+    *) Исправление: проксирование в unix domain сокеты не работало при
+       использовании переменных; ошибка появилась в 1.9.8.
+
+
 Изменения в nginx 1.9.8                                           08.12.2015
 
     *) Добавление: поддержка pwritev().
